Mobile button font was unreadable. Now fixed

--- a/src/App.css
+++ b/src/App.css
@@ -240,5 +240,9 @@ input {
     text-align: left;
     width: 80%
   }
+
+  button {
+    color: black
+  }
 }
 
