--- a/src/index.css
+++ b/src/index.css
@@ -68,5 +68,6 @@ button:focus-visible {
   } */
   button {
     background-color: #f9f9f9;
+    color: black;
   }
 }
